--- a/config.ini
+++ b/config.ini
@@ -1,18 +1,18 @@
 [RUNTIME_PARAMS]
-TRAIN = True
+TRAIN = False
 PREDICT = True
-USE_ID = 2020-03-09_16.55.02
+USE_ID = 2020-03-24_15.07.49
 
 [LSTM_PARAMS]
-BATCH_SIZE = 64
+BATCH_SIZE = 128
 BUFFER_SIZE = 10000
 TRAIN_SPLIT = 16000
 EPOCHS = 1
 PATIENCE = 10
 MIN_DELTA = 0.0003
 PAST_HISTORY = 60
-FUTURE_TARGET = 10
+FUTURE_TARGET = 20
 DROPOUT = 0.03
 STEP = 1
-LOAD_ID = "2020-03-09_16.55.02"
+LOAD_ID = "2020-03-24_15.07.49"
 
